--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,9 @@ warn_unused_configs = true
 warn_unused_ignores = true
 
 [[tool.mypy.overrides]]
-module = []
+module = [
+    "grpc.*",
+]
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
