--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+exclude: ^proto/zkp_auth_pb2_grpc.py$|^proto/zkp_auth_pb2.py$
+
 repos:
   # bandit is a tool designed to find common security issues in Python code.
   - repo: https://github.com/PyCQA/bandit
