Ignore missing library stubs for google.protobuf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ warn_unused_ignores = true
 
 [[tool.mypy.overrides]]
 module = [
+    "google.protobuf/*",
     "grpc.*",
 ]
 ignore_missing_imports = true
