--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,8 +36,8 @@ repos:
     rev: v1.4.1
     hooks:
       - id: mypy
-        args: [--config-file=pyproject.toml, --package=src]
-        pass_filenames: false
+        args: [--config-file=mypy.ini]
+        language: system
 
   # pre-commit-hooks is a collection of Git hooks for code quality, formatting, and analysis.
   - repo: https://github.com/pre-commit/pre-commit-hooks
