--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
       - id: mypy
         args: [--config-file=mypy.ini]
         language: system
-        exclud: proto/
+        exclude: proto/
 
   # pre-commit-hooks is a collection of Git hooks for code quality, formatting, and analysis.
   - repo: https://github.com/pre-commit/pre-commit-hooks
