--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,7 +36,7 @@ repos:
     rev: v1.4.1
     hooks:
       - id: mypy
-        args: [--config-file=pyprojects.toml]
+        args: [--config-file=pyproject.toml]
         language: system
         exclude: proto/
 
