--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ bandit = {version = "1.7.5", extras = ["toml"]}
 black = "23.3.0"
 flake8 = "6.0.0"
 isort = "5.12.0"
-mypy = "1.4.1"
-pre-commit = "3.3.3"
-pre-commit-hooks = "4.4.0"
+mypy = "1.6.1"
+pre-commit = "3.5.0"
+pre-commit-hooks = "4.5.0"
 pyupgrade = "3.7.0"
 
 [build-system]
@@ -63,14 +63,42 @@ warn_unreachable = true
 warn_unused_configs = true
 warn_unused_ignores = true
 
-exclude = [
-    '^proto/',
-]
+# exclude = '^proto/'
+
+# exclude = [
+#     '^proto/',
+# ]
+
+# exclude = [
+#     '^proto/zkp_auth_pb2_grpc.py$',
+#     '^proto/zkp_auth_pb2.py$'
+# ]
+
+# exclude = [
+#     "^proto/zkp_auth_pb2_grpc.py$",
+#     "^proto/zkp_auth_pb2.py$"
+# ]
+
+# [tool.mypy.exclude]
+# files = [
+#   '^proto/zkp_auth_pb2_grpc.py$',
+#   '^proto/zkp_auth_pb2.py$'
+# ]
+
+# [tool.mypy.exclude]
+# files = [
+#   "^proto/zkp_auth_pb2_grpc.py$",
+#   "^proto/zkp_auth_pb2.py$"
+# ]
+
+# [tool.mypy.files]
+# exclude = '^(?:proto/|/proto/)'
 
 [[tool.mypy.overrides]]
 module = [
     "google.protobuf.*",
     "grpc.*",
+    "proto.*",
 ]
 ignore_missing_imports = true
 
