--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ python_version = "3.11"
 check_untyped_defs = true
 disallow_untyped_defs = true
 incremental = false
-ignore_errors = true
+ignore_errors = false
 pretty = true
 show_error_context = true
 show_traceback = true
@@ -63,67 +63,10 @@ warn_unreachable = true
 warn_unused_configs = true
 warn_unused_ignores = true
 
-# exclude = '(^|/)proto/)'
-
-# exclude = "(^|/)proto/)"
-
-# exclude = "(proto/zkp_auth_pb2_grpc.py)"
-
-# exclude = "(proto/zkp_auth_pb2_grpc.py|proto/zkp_auth_pb2.py)"
-
-# exclude = "(zkp_auth_pb2_grpc.py|zkp_auth_pb2.py)/$"
-
-# exclude = """
-# (?x)(
-#     zkp_auth_pb2_grpc.py$
-# )
-# """
-
-# exclude = "./proto"
-
-# exclude = '^proto/'
-
-# exclude = [
-#     '^proto/',
-# ]
-
-# exclude = [
-#     '^proto/zkp_auth_pb2_grpc.py$',
-#     '^proto/zkp_auth_pb2.py$'
-# ]
-
-# exclude = [
-#     "^proto/zkp_auth_pb2_grpc.py$",
-#     "^proto/zkp_auth_pb2.py$"
-# ]
-
-# [tool.mypy.exclude]
-# files = [
-#   '^proto/zkp_auth_pb2_grpc.py$',
-#   '^proto/zkp_auth_pb2.py$'
-# ]
-
-# [tool.mypy.exclude]
-# files = [
-#   "^proto/zkp_auth_pb2_grpc.py$",
-#   "^proto/zkp_auth_pb2.py$"
-# ]
-
-# [tool.mypy.files]
-# exclude = '^(?:proto/|/proto/)'
-
-# [mypy.myproject.generated.*]
-
-# [tool.mypy.ignore_errors]
-# module = [
-#     "proto.*",
-# ]
-
 [[tool.mypy.overrides]]
 module = [
     "google.protobuf.*",
     "grpc.*",
-    "proto.*",
 ]
 ignore_missing_imports = true
 
