Add mypy exclude

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,10 @@ warn_unreachable = true
 warn_unused_configs = true
 warn_unused_ignores = true
 
+exclude = [
+    '^proto/',
+]
+
 [[tool.mypy.overrides]]
 module = [
     "google.*",
