Update mypy exclude

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,9 @@ warn_unreachable = true
 warn_unused_configs = true
 warn_unused_ignores = true
 
-exclude = '(proto/zkp_auth_pb2_grpc.py)'
+exclude = '''
+    ^proto/zkp_auth_pb2_grpc\.py$
+'''
 
 [[tool.mypy.overrides]]
 module = [
