--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ grpcio-tools = "1.59.2"
 mypy-protobuf = "3.5.0"
 envyaml = "1.10.211231"
 argparse = "1.4.0"
+pydantic = "2.4.2"
 
 [tool.poetry.group.dev.dependencies]
 bandit = {version = "1.7.5", extras = ["toml"]}
@@ -71,6 +72,7 @@ module = [
     "google.*",
     "google.protobuf.*",
     "grpc.*",
+    "pydantic.*",
 ]
 ignore_missing_imports = true
 
