--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,12 +1,12 @@
 public_variables:
-  p: 3755596804371315599
-  q: 1877798402185657799
-  g: 1891374716607036356
-  h: 1773229570835484706
+  p: 3755596804371315599  # Max 63 bit number due to our protobuf constraints being int64 and because they're signed we need to minus 1
+  q: 1877798402185657799  # Max 63 bit number due to our protobuf constraints being int64 and because they're signed we need to minus 1
+  g: 1891374716607036356  # Max 63 bit number due to our protobuf constraints being int64 and because they're signed we need to minus 1
+  h: 1773229570835484706  # Max 63 bit number due to our protobuf constraints being int64 and because they're signed we need to minus 1
 
 implementation:
   flavour: "exponentiations"
-  bits: 63  # Max 63 due to our protobuf constraints being int64 and because they're signed we need to minus 1
+  bits: 63  # Max 63 bits due to our protobuf constraints being int64 and because they're signed we need to minus 1
 
 logging:
   level: "debug"
